@@ -1,3 +1,7 @@
+2005-10-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/libgomp.fortran/reference1.f90: New test.
+
 2005-10-11  Jakub Jelinek  <jakub@redhat.com>
 
 	* testsuite/libgomp.dg/reduction-1.c: New test.
